[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-http = "3.0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.79"
config = "0.11.0"
chrono = "0.4.19"
uuid = { version = "0.8.2" , features= ["v4"]}
tracing = {version = "0.1.31", features=["log"]}
tracing-futures = "0.2.5"
tracing-subscriber = {version = "0.3.9", features=["registry","env-filter"]}
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-actix-web = "0.5.1"

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
    "postgres",
    "uuid", # Mapping SQL UUID to Rust UUID
    "chrono", #For mapping timestampz
    "migrate", # Manage migrates
    "macros", # Gives us access to sqlx::query
    "runtime-actix-rustls", # use actix runtime for its futures and TLS backed
    "offline" 
]

[dev-dependencies]
actix-rt = "2"
once_cell = "1.10.0"
reqwest = "0.11"
tokio = "1"
